Fixed 960px align right

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ li {
     text-align: left;
   }
 
-  .list-group {
+  .nav {
     text-align: right;
   }
 
